@@ -1,3 +1,10 @@
+2005-11-15  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* Makefile.am:
+	* configure.ac:
+	Add configure options to change the installed font dir and
+	disable ISO8859-* fonts.
+
 2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
